--- a/src/components/MovieList/MovieCard.css
+++ b/src/components/MovieList/MovieCard.css
@@ -7,6 +7,11 @@
   color: #fff;
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.25);
   position: relative;
+  transition: all 0.2s ease-in-out;
+}
+
+.movie_card:hover {
+  transform: scale(1.08);
 }
 
 .movie_poster {
@@ -20,6 +25,16 @@
   width: 100%;
   height: 100%;
   padding: 10px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.movie_card:hover .movie_details {
+  opacity: 1;
 }
 
 .movie_details_heading {
@@ -27,10 +42,21 @@
   color: #ffe400;
 }
 
-.movie_data_rate {
+.movie_date_rate {
   justify-content: space-between;
   font-size: 12px;
   font-weight: 500;
   margin: 5px 0;
   color: #ffe400;
+}
+
+.card_emoji {
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+}
+
+.movie_description {
+  font-size: 12px;
+  font-style: italic;
 }
